--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,15 @@
         }
     ],
     "require": {
+        "larakit/lk-boot": "*",
+        "larakit/lk-staticfiles": "*",
+        "larakit/lk-route": "*",
+        "larakit/lk-html": "*",
+        "larakit/sf-larakit-js": "*",
+        "larakit/lk-twig": "*",
         "snoopy/snoopy": "*",
         "fzaninotto/faker": "*",
-        "alchemy/zippy": "^0.3.5",
-        "larakit/lk": "*"
+        "alchemy/zippy": "^0.3.5"
     },
     "autoload": {
         "psr-4": {
