--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "larakit/lk-boot": "*",
         "larakit/lk-staticfiles": "*",
         "larakit/lk-route": "*",
+        "larakit/lk-page": "*",
         "larakit/lk-html": "*",
-        "larakit/sf-larakit-js": "*",
         "larakit/lk-twig": "*",
         "snoopy/snoopy": "*",
         "fzaninotto/faker": "*",
